syntax = "proto3";

option go_package = "go-metrics/proto";

message Metric {
  string id = 1;
  string type = 2;
  int64 delta = 3;
  double value = 4;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  Metric metric = 1;
}

message ListResponse {
  repeated Metric metrics = 1;
}

message UpdateRequest {
  Metric metric = 1;
}

message UpdateResponse {
  Metric result = 1;
}

message UpdateListRequest {
  repeated Metric metric = 1;
}